--- a/box/index.css
+++ b/box/index.css
@@ -48,6 +48,9 @@ button{
 .set h1{
     line-height: 50px;
 }
+h3{
+    direction: rtl;
+}
 
 /*mobile view*/
 @media only screen and (max-width:600px){
@@ -63,16 +66,19 @@ button{
         padding: 50px;
         border-radius: 10px;
         flex-direction: column;
-        margin-top: 50px;
-        margin-right: 10px;
+        margin-top: 20px;
+        margin-right: 25px;
     }
     .set{
         color: white;
+        margin-top: 10px;
         padding: 30px;
         border: none;
         border-top: solid white;
         height: 200px;
         line-height: 20px;
+        margin-bottom: 30px;
+        border-bottom: solid white;
     }
     .set h1{
         line-height: 50px;
@@ -80,12 +86,12 @@ button{
     .chance{
         background-color: white;
         height: 250px;
-        width: 350px;
+        width: 370px;
         text-align: center;
         font-size: 20px;
         padding-top: 10px;
-        margin-top: 10px;
+        margin-top: 15px;
         border-radius: 5px;
-        margin-left: 20px;
+        margin-left: -10px;
     }
 }
